--- a/app/views/helper/javascriptRoutes.scala.html
+++ b/app/views/helper/javascriptRoutes.scala.html
@@ -1,4 +1,6 @@
 @helper.javascriptRouter("jsRoutes")(
 	routes.javascript.Application.index,
-	routes.javascript.Admin.setUserState
+	routes.javascript.Admin.setUserState,
+	routes.javascript.Admin.startLiveMatch,
+	routes.javascript.Admin.stopLiveMatch
 )
