implemented live match updates / events with Server-Sent Events (EventSource)

--- a/app/assets/stylesheets/bootstrap/variables.less
+++ b/app/assets/stylesheets/bootstrap/variables.less
@@ -55,8 +55,10 @@
 @zindexModal:             1050;
 
 // Sprite icons path
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+//AJO: original path : @iconSpritePath:          "../img/glyphicons-halflings.png";
+//AJO: original path :@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../images/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../images/glyphicons-halflings-white.png";
 
 // Input placeholder text color
 @placeholderText:         @grayLight;
