--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -110,6 +110,9 @@
 
 body {
 	padding-top: 60px;
+	//background-color: #F0F0F0; // light gray html5doctor
+	//background-color: #F2F2EB; // light gray akka docs
+	//background-color: #D3E8F2; // light blue twitter
 }
 
 section#admin input.error {
@@ -514,6 +517,9 @@ div.score {
 		.linear-gradient(#e2f6d0, #cbebb1);
 		//color: #eee;
 		//text-shadow: 0 1px 1px rgba(0,0,0,.75);
+	}
+	div.live {
+		.linear-gradient(#F7EF91, #FFEF78);
 	}
 	div.penalties {
 		padding: 5px 12px 0px 12px !important;
