--- a/app/views/helper/javascriptRoutes.scala.html
+++ b/app/views/helper/javascriptRoutes.scala.html
@@ -2,5 +2,6 @@
 	routes.javascript.Application.index,
 	routes.javascript.Admin.setUserState,
 	routes.javascript.Admin.startLiveMatch,
-	routes.javascript.Admin.stopLiveMatch
+	routes.javascript.Admin.stopLiveMatch,
+	routes.javascript.Application.eventSource
 )
