--- a/app/views/helper/scoreDiv.scala.html
+++ b/app/views/helper/scoreDiv.scala.html
@@ -1,7 +1,7 @@
 @(zmatch: Match)
 
 <div class="score">
-	<div class="leftscore @if(zmatch.isTeamAWinner){winner}">@zmatch.result.get.scoreA</div><div class="rightscore @if(zmatch.isTeamBWinner){winner}">@zmatch.result.get.scoreB</div>
+	<div class="leftscore @if(zmatch.isLive){live}else{@if(zmatch.isTeamAWinner){winner}}">@zmatch.result.get.scoreA</div><div class="rightscore @if(zmatch.isLive){live}else{@if(zmatch.isTeamBWinner){winner}}">@zmatch.result.get.scoreB</div>
 	@if(zmatch.result.isDefined) {
 		@zmatch.result.get.penaltiesScore.map { ps =>
 			<br>
