--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -61,6 +61,12 @@
  						<!-- some html content only viewable by an admin -->
 					}
  					@controllers.Security.username.map { user =>
+ 						<li>
+ 							<button id="sse-toggle-btn" class="btn btn-mini" data-toggle="button" style="margin-top: 10px;" title="Listen/Mute events">
+ 								<!-- <img src="@routes.Assets.at("images/wifi.png")"> -->
+ 								<i class="icon-signal"></i>
+ 							</button>
+ 						</li>
 						<li class="dropdown">
 	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 	              				<img src="@models.User.gravatarUrl(controllers.Security.useremail.get)" style="float:left; margin-right: 3px; max-height: 20px;" />
