disabled server-sent events

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -135,6 +135,7 @@
 	
 	//===================== Initializations =======================================
 	$(function() {
+		/* Disabled automatic SSE connection
 		setTimeout(function() { connectSSE(); }, 1000);
 		window.onbeforeunload = function() { disconnectSSE(); };
 		$("#sse-toggle-btn").click(function() {
@@ -144,6 +145,7 @@
 			else
 				disconnectSSE();
 		});
+		*/
 	});
 </script>
 }
