--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -15,87 +15,89 @@
 		</div>
 	</div>
 	
-	<div class="page-header">
-		<h1>Game rules
-			<small>How points are computed</small>
-		</h1>
-	</div>
-	<div class="row">
-		<div class="span8 offset2">
-			<h4>Points</h4>
-			<p>
-				Each phase contains several matches to forecast. 
-				Each match correctly forecasted yield a number of points. 
-				A forecast is correct if you guess the winning team or a draw. 
-				Bonus points are added if you also guess the exact score of the match. 
-				The number of points and bonus points depend on the phase of the competition as follows:
-			</p>
-			
-			<h5>Stage 1 - Group Stage (includes MD1,MD2,MD3 24 matches):</h5>
-			<ul>
-				<li>Correct Result: <span class="label">1 point</span></li>
-				<li>Correct Score: <span class="label label-success">+3 points</span></li>	
-			</ul>
-			
-			@*<!--  
-			Stage 2 Ð Round of 16 (8 matches):
-			Correct Result: 3 points
-			Correct Score: +5 points
-			-->*@
-
-			<h5>Stage 2 - Quarter-Finals (4 matches):</h5>
-			<ul>
-				<li>Correct Result: <span class="label">4 points</span></li>
-				<li>Correct Score: <span class="label label-success">+7 points</span></li>
-			</ul>
-			
-			
-			<h5>Stage 3 - Semi-Finals (2 matches):</h5>
-			<ul>
-				<li>Correct Result: <span class="label">6 points</span></li>
-				<li>Correct Score: <span class="label label-success">+10 points</span></li>
-			</ul>
-			
-			@*<!--
-			<h5>Stage 4 - Play-Off (3rd place):</h5>
-			<ul>
-				<li>Correct Result: 10 points</li>
-				<li>Correct Score: +10 points</li>
-			</ul>
-			-->*@
-			
-			<h5>Stage 4 - Final (1st place):</h5>
-			<ul>
-				<li>Correct Result: <span class="label">15 points</span></li>
-				<li>Correct Score: <span class="label label-success">+20 points</span></li>
-			</ul>
-
-			<h4>Deadline</h4>
-			<p>
-				A forecast can be entered up until <strong>30 minutes</strong> before the start of each match (Central European Time). 
-				Beyond that point, forecasting is locked for that match.
-			</p>
-			 
-			<h4>Score</h4>
-			<p>
-				The final official score after full time, including extra-time if needed, 
-				represents the base for calculating points for match results and bonus points for correct score. 
-				Eventual penalty shootouts after extra-time do not count!
-			<p>
-			 
-			<h4>Award</h4>
-			<p>
-				The winners are the three (3) with the highest number of points after the contest is over. 
-				Winners with equal number of points will be separated on goal-average as follows: each correct score yields +1 point in goal-average. 
-				Winners with equal goal-average will be separated by draw, if possible in their presence.
-			</p>
-			 
-			<h4>Prizes</h4>
-			<p>
-				This game is being played for fun !
-				Unless donations are made, expect no special prize except my respect ;-)
-			</p>
-		
+	<section id="rules">
+		<div class="page-header">
+			<h1>Game rules
+				<small>How points are computed</small>
+			</h1>
 		</div>
-	</div>
+		<div class="row">
+			<div class="span8 offset2">
+				<h4>Points</h4>
+				<p>
+					Each phase contains several matches to forecast. 
+					Each match correctly forecasted yield a number of points. 
+					A forecast is correct if you guess the winning team or a draw. 
+					Bonus points are added if you also guess the exact score of the match. 
+					The number of points and bonus points depend on the phase of the competition as follows:
+				</p>
+				
+				<h5>Stage 1 - Group Stage (includes MD1,MD2,MD3 24 matches):</h5>
+				<ul>
+					<li>Correct Result: <span class="label">1 point</span></li>
+					<li>Correct Score: <span class="label label-success">+3 points</span></li>	
+				</ul>
+				
+				@*<!--  
+				Stage 2 Ð Round of 16 (8 matches):
+				Correct Result: 3 points
+				Correct Score: +5 points
+				-->*@
+	
+				<h5>Stage 2 - Quarter-Finals (4 matches):</h5>
+				<ul>
+					<li>Correct Result: <span class="label">4 points</span></li>
+					<li>Correct Score: <span class="label label-success">+7 points</span></li>
+				</ul>
+				
+				
+				<h5>Stage 3 - Semi-Finals (2 matches):</h5>
+				<ul>
+					<li>Correct Result: <span class="label">6 points</span></li>
+					<li>Correct Score: <span class="label label-success">+10 points</span></li>
+				</ul>
+				
+				@*<!--
+				<h5>Stage 4 - Play-Off (3rd place):</h5>
+				<ul>
+					<li>Correct Result: 10 points</li>
+					<li>Correct Score: +10 points</li>
+				</ul>
+				-->*@
+				
+				<h5>Stage 4 - Final (1st place):</h5>
+				<ul>
+					<li>Correct Result: <span class="label">15 points</span></li>
+					<li>Correct Score: <span class="label label-success">+20 points</span></li>
+				</ul>
+	
+				<h4>Deadline</h4>
+				<p>
+					A forecast can be entered up until <strong>30 minutes</strong> before the start of each match (Central European Time). 
+					Beyond that point, forecasting is locked for that match.
+				</p>
+				 
+				<h4>Score</h4>
+				<p>
+					The final official score after full time, including extra-time if needed, 
+					represents the base for calculating points for match results and bonus points for correct score. 
+					Eventual penalty shootouts after extra-time do not count!
+				<p>
+				 
+				<h4>Award</h4>
+				<p>
+					The winners are the three (3) with the highest number of points after the contest is over. 
+					Winners with equal number of points will be separated on goal-average as follows: each correct score yields +1 point in goal-average. 
+					Winners with equal goal-average will be separated by draw, if possible in their presence.
+				</p>
+				 
+				<h4>Prizes</h4>
+				<p>
+					This game is being played for fun !
+					Unless donations are made, expect no special prize except my respect ;-)
+				</p>
+			
+			</div>
+		</div>
+	</section>
 }
