--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -41,7 +41,7 @@
             			<li class="dropdown @if(activeNav=="competition"){active}">
 	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Competition <b class="caret"></b></a>
 	              			<ul class="dropdown-menu">
-	              				<li><a href="@routes.Application.showTeams()">Teams</a></li>
+	              				<!-- <li><a href="@routes.Application.showTeams()">Teams</a></li> -->
 	              				<li><a href="@routes.Application.showGroups()">Groups</a></li>
 	              				<li><a href="@routes.Application.showSchedule()">Schedule / Results</a></li>
 	              				<li><a href="@routes.Application.showStandings()">Standings</a></li>
@@ -97,7 +97,7 @@
 			</div>
 			<hr>
 			<footer>
-				<p>&copy; OzB 2011</p>
+				<p>&copy; OzB 2012</p>
 			</footer>
 		</div>
     </body>
