--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -188,39 +188,13 @@
 
 @layout.main("Home", head = headContent, navbarSecondLine = navbarSecondLineContent) {
     
-    <!--  
-    <h2>Main menu</h2>
-    @helper.Sec.IsAdmin {
-	<ul>
-		<li><a href="@routes.Admin.showAdmin()">admin</a></li>
-	</ul>
-    }
-    
-    <h3>Dashboard</h3>
-    <p>
-    	number of forecasts (with completion)
-    	number of points / remaining number of points
-    	calendar with results/forecasts
-    </p>
-    
-    <h3>Competition</h3>
-    <ul>
-    	<li><a href="@routes.Application.showTeams()">teams</a></li>
-    	<li><a href="@routes.Application.showGroups()">groups</a></li>
-    	<li><a href="@routes.Application.showSchedule()">schedule/results</a></li>
-    	<li><a href="@routes.Application.showStandings()">standings</a></li>
-    </ul>
-    
-    <h3>Game</h3>
-    <ul>
-        <li><a href="@routes.Application.showForecasts()">forecasts</a></li>
-    	<li><a href="@routes.Application.showRanking()">ranking</a></li>
-    </ul>	
-    -->
-
 	@defining(controllers.Application.getRankings) { rankings =>
 	<div class="row">
 		<div class="span8">
+			<div class="alert alert-info">
+	        	Ahoy ! Don't forget to check the <strong><a href="@routes.Application.showAbout()#rules">rules</a></strong> and <strong>good luck !</strong>
+	      	</div>
+	
 			@if(controllers.Application.hasCompetitionStarted) {
 				<h2>Your ranking</h2>
 				
@@ -296,7 +270,7 @@
 			@if(matches.isEmpty) {
 				@emptyMsg
 			} else {
-				<!--@* group matches by date so we can display matches played day by day  *@-->
+				<!--@* group matches by date so we can display matches played day by day  
 				@defining(matches.groupBy(zmatch => zmatch.kickoffDay)) { matchesByDate =>
 					@matchesByDate.keys.toSeq.sorted.map { date =>
 						<div class="koDate">@date.format("EEEEE', the' dd 'of' MMMMM yyyy")</div>
@@ -304,6 +278,8 @@
 						@helper.matchesTable(matchesByDate(date))
 					}
 				}
+				*@-->
+				@helper.matchesTable(matches)
 			}
 }
 
