--- a/app/views/schedule.scala.html
+++ b/app/views/schedule.scala.html
@@ -28,7 +28,9 @@
 		<!--@* group matches by date so we can display matches played day by day  *@-->
 		@defining(matchesByPhase(phase.toString).groupBy(zmatch => zmatch.kickoffDay)) { matchesByDate =>
 			@matchesByDate.keys.toSeq.sorted.map { date =>
-				<div class="koDate">@date.format("EEEEE', the' dd 'of' MMMMM yyyy")</div>
+			
+				<!-- <div class="koDate">@date.format("EEEEE', the' dd 'of' MMMMM yyyy")</div> -->
+				<br/>
 	
 				@helper.matchesTable(matchesByDate(date))
 			}
