--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(loginForm: play.api.data.Form[models.User])(implicit request: play.api.mvc.RequestHeader)
+@(form: play.api.data.Form[models.User])(implicit request: play.api.mvc.RequestHeader)
 
 @layout.main("Login", activeNav = "login") {
 	<div class="modal" style="position: relative; top: auto; left: auto; margin: 0pt auto; z-index: 1;">
@@ -7,9 +7,9 @@
 		</div>
 		
 		<div class="modal-body">
-			@if(loginForm.hasGlobalErrors) {
+			@if(form.hasGlobalErrors) {
 				<div class="alert alert-error">
-					@loginForm.globalError.map { error =>
+					@form.globalError.map { error =>
 						<strong>Oh no !</strong>
 		            	@error.message
 		            }
@@ -19,32 +19,9 @@
 			<form id="loginForm" method="post" action="@routes.Security.authenticate()" class="form-horizontal">
 				<fieldset>
 					<legend>Enter your credentials</legend>
-					@loginForm.forField("name") { field =>
-						<div class="control-group @if(! field.errors.isEmpty) { error }">
-							<label class="control-label" for="name">Username :</label>
-							<div class="controls">
-								<input id="name" name="@field.name" type="text" value="@field.value" autocomplete="on" autofocus />
-								@if(! field.errors.isEmpty) {
-									<span class="help-inline">
-										@field.errors.map(err => Messages(err.message)).mkString(",")
-									</span>
-								}
-							</div>
-						</div>
-					}
-					@loginForm.forField("password") { field =>
-						<div class="control-group @if(! field.errors.isEmpty) { error }">
-							<label class="control-label" for="password">Password :</label>
-							<div class="controls">
-								<input id="password" name="@field.name" type="password" />
-								@if(! field.errors.isEmpty) {
-									<span class="help-inline">
-										@field.errors.map(err => Messages(err.message)).mkString(",")
-									</span>
-								}
-							</div>
-						</div>
-					}
+					@helper.forms.input("text", form("name"), "Username", true, true)()
+
+					@helper.forms.input("password", form("password"), "Password")()
  				</fieldset>
 			</form>
 		</div>
