--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -1,4 +1,4 @@
-@(registerForm: play.api.data.Form[models.User])(implicit request: play.api.mvc.RequestHeader)
+@(form: play.api.data.Form[(models.User, String)])(implicit request: play.api.mvc.RequestHeader)
 
 @layout.main("Register") {
 	<div class="modal" style="position: relative; top: auto; left: auto; margin: 0pt auto; z-index: 1;">
@@ -7,71 +7,38 @@
 		</div>
  -->		
 		<div class="modal-body">
-			@if(registerForm.hasGlobalErrors) {
+			@if(form.hasGlobalErrors) {
 				<div class="alert alert-error">
-					@registerForm.globalError.map { error =>
+					@form.globalError.map { error =>
 		                @error.message
 		            }
 				</div>
 			}
 			
-			<form id="registerForm" method="post" action="@routes.Security.registerSubmit()" class="form-horizontal">
+			<form id="form" method="post" action="@routes.Security.registerSubmit()" class="form-horizontal">
 				<fieldset>
 					<legend>Create new user</legend>
-					@registerForm.forField("name") { field =>
-						<div class="control-group @if(! field.errors.isEmpty) { error }">
-							<label class="control-label" for="name">Username :</label>
-							<div class="controls">
-								<input id="name" name="@field.name" type="text" value="@field.value" autofocus />
-								@if(! field.errors.isEmpty) {
-									<span class="help-inline">
-										@field.errors.map(err => Messages(err.message)).mkString(",")
-									</span>
-								}
-							</div>
+					@helper.forms.input("text", form("name"), "Username", true)()
+					
+					@helper.forms.input("text", form("email"), "E-mail"){
+						<div class="alert alert-info" style="font-size: 11px; margin-top: 5px; margin-bottom: 0">
+						Your email will be used to lookup your picture from the <strong><a href="http://gravatar.com">gravatar.com</a></strong> site.
+						If you haven't yet created an account on gravatar.com, I highly recommend you to do so (it's free) ! 
 						</div>
 					}
-					@registerForm.forField("email") { field =>
-						<div class="control-group @if(! field.errors.isEmpty) { error }">
-							<label class="control-label" for="email">E-mail :</label>
-							<div class="controls">
-								<input id="email" name="@field.name" type="email" value="@field.value" />
-								@if(! field.errors.isEmpty) {
-									<span class="help-inline">
-										@field.errors.map(err => Messages(err.message)).mkString(",")
-									</span>
-								}
-								<p class="help-block">
-									<div class="alert alert-info" style="font-size: 11px;">
-									Your email will be used to lookup your picture from the <strong><a href="http://gravatar.com">gravatar.com</a></strong> site.
-									If you haven't yet created an account on gravatar.com, I highly recommend you to do so (it's free) ! 
-									</div>
-								</p>
-							</div>
-						</div>
-					}
-					@registerForm.forField("password") { field =>
-						<div class="control-group @if(! field.errors.isEmpty) { error }">
-							<label class="control-label" for="password">Password :</label>
-							<div class="controls">
-								<input id="password" name="@field.name" type="password" />
-								@if(! field.errors.isEmpty) {
-									<span class="help-inline">
-										@field.errors.map(err => Messages(err.message)).mkString(",")
-									</span>
-								}
-							</div>
-						</div>
-					}
+
+					@helper.forms.input("password", form("password"), "Password")()
+
+					@helper.forms.input("password", form("confirm"), "Confirm password")()
 				</fieldset>
 			</form>
 		</div>
 		
 		<div class="modal-footer">
-			@if(registerForm.hasErrors) {
+			@if(form.hasErrors) {
 				<span class="error">Please fix the errors before submitting</span>
 			}		
-			<a href="#"	class="btn btn-primary" onclick="$('#registerForm').submit()">Register</a>
+			<a href="#"	class="btn btn-primary" onclick="$('#form').submit()">Register</a>
 		</div>
 	</div>
 }
