--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -132,6 +132,18 @@ body {
 	//background-color: #D3E8F2; // light blue twitter
 }
 
+div.logo {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index:2000;
+	padding-left: 20px;
+	
+	img {
+		height: 42px;
+	}
+}
+
 section#admin input.error {
 	background-color: #F6CECE; 
 }
