added account page; added database management page; upgraded bootstrap to 2.0.4; upgraded play to 2.1-SNAPSHOT

--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -100,4 +100,25 @@
 			</div>
 		</div>
 	</section>
+	
+	<section id="credits">
+		<div class="page-header">
+			<h1>Technological stack &amp; Credits
+				<small>How this app is implemented</small>
+			</h1>
+		</div>
+		<div class="row">
+			<div class="span8 offset2">
+				<h4>On the tech side</h4>
+				<p>
+					As stated above, this app is a kind of playground that let me try and learn great framework and libraries.
+					The web framework is Play 2.0, Scala version.
+					The persistence is managed a by H2 database (that comes with Play).
+					The html template is built using Twitter's Bootstrap while LESS is used for css generation.
+					JQuery is used for scripting on browser.
+				</p>				
+			</div>
+		</div>
+	</section>				
+	
 }
