--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -54,6 +54,9 @@
 	    			@helper.dateSlider()
 	    			
 	    			<br><br>
+	    			
+	    			<a href="@routes.DataAccess.showDatabase()">Database</a>
+	    			
 	    		</div>
 	    		<div id="teams" class="tab-pane">
 	    			balblabla teams bla bla
