--- a/app/views/helper/forms/input.scala.html
+++ b/app/views/helper/forms/input.scala.html
@@ -1,7 +1,7 @@
 @(ftype: String, field: play.api.data.Field, label: String, focus: Boolean = false, autocomplete: Boolean = false)(f: => Html = Html.empty)
 
 <div class="control-group @if(! field.errors.isEmpty) { error }">
-	<label class="control-label" for="name">@label :</label>
+	<label class="control-label" for="@field.name">@label :</label>
 	<div class="controls">
 		<input id="@field.name" name="@field.name" type="@ftype" value="@field.value" @if(autocomplete){autocomplete="on"} @if(focus){autofocus} />
 		@if(! field.errors.isEmpty) {
