--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -32,7 +32,7 @@
     	</div>
     	<div class="navbar navbar-fixed-top">
     		<div class="navbar-inner">
-        		<div class="container">
+        		<div class="container" style="min-height: 43px;">
 					<!-- <a class="brand" href="#">Eu12</a> -->
 					<div style="float: left; width: 130px;">&nbsp;<!-- some room for the logo --></div>
 					<ul class="nav">
@@ -82,6 +82,7 @@
 		              				<li><a href="@routes.Admin.showAdmin()">Admin</a></li>
 		              				<li class="divider"></li>
 	              				}
+	              				<li><a href="@routes.Application.showAccount()">Account</a></li>
 								<li><a href="@routes.Security.logout">Logout</a></li>
 							</ul>
 						</li>
